--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -1,12 +1,22 @@
-<app-user-navbar></app-user-navbar>
 <div class="min-h-screen bg-gray-100">
+  
     <!-- When the mobile menu is open, add `overflow-hidden` to the `body` element to prevent double scrollbars -->
     <!-- Menu open: "fixed inset-0 z-40 overflow-y-auto", Menu closed: "undefined" -->
-
+    <app-user-navbar></app-user-navbar>
     <div class="py-10">
       <div class="max-w-3xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-12 lg:gap-8">
         <main class="lg:col-span-9 xl:col-span-7">
           <button routerLink="/publication"> Crear publicación </button> <!-- todo faltan estilos -->
+          <form action="/posts/new" method="POST" class="flex mb-4 flex-col">
+            <textarea class="w-full resize-y rounded-md shadow border-0 text-sm flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
+                rows="5" name="content" placeholder="Escribe algo..."></textarea>
+            <div class="w-full flex justify-end" style="margin-bottom: -35px">
+                <button style="top: -45px; right: 10px; max-width: 100px;"
+                    class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative">
+                    Publicar
+                </button>
+            </div>
+        </form>
           <div class="px-4 sm:px-0"></div>
           <div class="">
             <h1 class="sr-only">Recent questions</h1>
