--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -5,47 +5,83 @@
             <a routerLink="/home" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
         </li>
         <li>
-            <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8"><i class="fas fa-home mr-3"></i>Home</a>
+            <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8">Home</a>
         </li>
         <li>
-            <a routerLink="/store" class="p-3 hover:text-purple-600"><i class="fas fa-store-alt mr-3"></i>Tienda</a>
+            <a routerLink="/store" class="p-3 hover:text-purple-600">Tienda</a>
         </li>
         <li>
-          <a routerLink="/messages" class="p-3 hover:text-purple-600"><i class="fas fa-paper-plane mr-3"></i>Mensajería</a>
+          <a routerLink="/messages" class="p-3 hover:text-purple-600">Mensajería</a>
         </li>
         <li>
-          <a routerLink="/users" class="p-3 hover:text-purple-600"><i class="fas fa-users mr-3"></i>Usuarios</a>
+          <a routerLink="/users" class="p-3 hover:text-purple-600">Usuarios</a>
         </li>
     </ul>
-    <div class="flex-1 px-4 flex justify-between ml-3">
-      <div class="flex-1 flex">
-        <form class="w-full flex md:ml-0" action="#" method="GET">
-          <label for="search_field" class="sr-only">Search</label>
-          <div class="relative w-full text-gray-400 focus-within:text-gray-600">
-            <div class="absolute inset-y-0 left-0 flex items-center pointer-events-none">
-              <!-- Heroicon name: solid/search -->
-              <svg class="h-5 w-5 mt-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-              </svg>
-            </div>
-            <input id="search_field" class="block w-full h-full pl-8 pr-3 py-2 border-transparent text-gray-900 placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-0 focus:border-transparent sm:text-sm" placeholder="Search" type="search" name="search">
+    <div class="flex-1 flex items-center justify-left px-2 lg:ml-6">
+      <div class="w-10/12">
+        <label for="search" class="sr-only">Search</label>
+        <div class="relative">
+          <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+            <!-- Heroicon name: solid/search -->
+            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+            </svg>
           </div>
-        </form>
+          <input id="search" name="search" class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white shadow-sm placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-blue-600 focus:border-blue-600 sm:text-sm" placeholder="Buscar" type="search">
+        </div>
       </div>
-
     </div>
-    <div class="ml-4 flex items-center md:ml-6">
+    <div class="ml-4 mr-6 flex items-center md:ml-6" (click)="toggleNotifications();">
       <button class="bg-white p-1 rounded-full text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
         <span class="sr-only">View notifications</span>
         <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
         </svg>
       </button>
+      <div id="menuNotifications" class="w-2/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
+        <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+            <img class="h-8 w-8 rounded-full object-cover mx-1"
+                src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+                alt="avatar">
+            <p class="text-gray-600 text-sm mx-2">
+                <span class="font-bold" href="#">Sara Salah</span> replied on the <span
+                    class="font-bold text-blue-500" href="#">Upload Image</span> artical .
+                2m
+            </p>
+        </a>
+        <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+        <img class="h-8 w-8 rounded-full object-cover mx-1"
+            src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+            alt="avatar">
+        <p class="text-gray-600 text-sm mx-2">
+            <span class="font-bold" href="#">Slick Net</span> start following you . 45m
+        </p>
+    </a>
+    <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+        <img class="h-8 w-8 rounded-full object-cover mx-1"
+            src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+            alt="avatar">
+        <p class="text-gray-600 text-sm mx-2">
+            <span class="font-bold" href="#">Jane Doe</span> Like Your reply on <span
+                class="font-bold text-blue-500" href="#">Test with TDD</span> artical . 1h
+        </p>
+    </a>
+    <a href="#" class="flex items-center px-4 py-3 hover:bg-gray-100 -mx-2">
+        <img class="h-8 w-8 rounded-full object-cover mx-1"
+            src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80"
+            alt="avatar">
+        <p class="text-gray-600 text-sm mx-2">
+            <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
+        </p>
+    </a>
+<a href="/dashboard/notifications" id="subMenu" class="block bg-gray-800 text-white text-center font-bold py-2">See all
+    notifications</a>
+    </div>
     </div>
     <ul class="flex items-center">
-      <div class="ml-4">
+      <!--<div class="ml-4">
          {{ user.name }} {{ user.surname1 }}
-      </div>
+      </div>-->
       <div class="ml-3 relative">
         <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
